--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -551,6 +551,7 @@
   "member": "Member",
   "number_member_one": "{{count}} member",
   "number_member_other": "{{count}} members",
+  "number_selected": "{{count}} selected",
   "owner": "Owner",
   "admin": "Admin",
   "administrator_user": "Administrator user",
@@ -1530,6 +1531,7 @@
   "apps_settings": "Apps settings",
   "fill_this_field": "Please fill in this field",
   "options": "Options",
+  "no_options_available":"No Options Available",
   "enter_option": "Enter Option {{index}}",
   "add_an_option": "Add an option",
   "radio": "Radio",
